# econ_reports

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
cpi_dash_app/: app.py  collect_data.py
cpi_dash_app/src/: all_categories_tab.py  core_and_headline_tab.py  edu_tab.py  energy_tab.py  food_tab.py  housing_tab.py  medical_tab.py  overview_tab.py
cpi_dash_app/src/data/cpi/: wide_df.csv
cpi_dash_app/src/utils/: line_plots.py  prep_data.py
dev_notebooks/: README.md  home_prices_report.ipynb  search_for_series.ipynb  test.ipynb
dev_notebooks/test_html/: home_prices.html
dev_notebooks/time_series_analysis/: housing_starts.ipynb  mortgage_debt.ipynb
econ_reports/: home_prices_report.ipynb  inflation_report.ipynb  main.py  search_for_series.ipynb
econ_reports/reports/: inflation_report.ipynb
econ_reports/utils/: pandas_utils.py  pyfredapi.py
econ_reports_site/source/: conf.py  index.rst
econ_reports_utils/: pyproject.toml
notebooks/: get_cpi_data.ipynb
notebooks/data/cpi/: long_df.csv
