[tool.poetry]
name = "econ-reports"
version = "0.1.0"
description = "Economic reports with jupyter notebooks"
authors = ["gw-moore <gwmoore92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "econ_reports"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.0"
jupyter = "^1.0.0"
nbconvert = "^7.2.1"
papermill = "^2.4.0"
pyfredapi = "^0.5.0"
plotly = "^5.10.0"
jupyterlab = "^3.4.7"
rich = "^12.6.0"
altair = "^4.2.0"
seaborn = "^0.12.0"
statsmodels = "^0.13.2"
Sphinx = "^5.3.0"
sphinx-material = "^0.0.35"
myst-parser = "^0.18.1"
nbsphinx = "^0.8.9"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
pre-commit = "^2.20.0"

[tool.poetry.scripts]
generate_report = "econ_reports.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.venv
    | \.ipynb_checkpoints
    | _build
    | buck-out
    | build
    | dist
)/
'''
